XPCOM cycle collector is initialized statically, don't do that. b=369336 r=graydon sr=vlad